# SVG-Studio

./: CMakeLists.txt  SVGStudioData.json  SVG_STUDIO_APP.rc  SVG_Studio.cpp  desktop.ini
